--- a/style.css
+++ b/style.css
@@ -1,18 +1,42 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: indigo;
-    color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0;
-    padding: 0;
+    color: #fefefe;
+    font-family: "Courier Prime", monospace;
+}
+
+p {
+    line-height: 1.5;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: expanded;
 }
 
 .game-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     height: 100vh;
     width: 100vw;
+    row-gap: 20px;
+}
+
+.lives-container {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 8px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding-left: 15px;
+    width: 80%;
+    max-width: 560px;
 }
 
 canvas {
@@ -44,11 +68,15 @@ button:not(:last-child) {
 }
 
 .messages-container {
+    background-color: rgb(35, 34, 35);
     display: flex;
     flex-wrap: wrap;
+    border: 4px solid #ff6600;
+    border-radius: 8px;
     margin: 0 auto;
+    padding: 8px;
     width: 80%;
-    max-width: 460px;
+    max-width: 560px;
 }
 
 p {
