--- a/style.css
+++ b/style.css
@@ -28,14 +28,15 @@ p {
     row-gap: 20px;
 }
 
-.lives-container {
+.info-container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    justify-content: space-around;
     border-radius: 8px;
     margin: 0 auto;
     margin-top: 20px;
     padding-left: 15px;
-    width: 80%;
+    width: 100%;
     max-width: 495px;
 }
 
