--- a/style.css
+++ b/style.css
@@ -62,6 +62,24 @@ button {
     margin: 0;
     padding: 5px 20px;
     width: 100px;
+    cursor: pointer;
+}
+
+.main-button {
+    background-color: #fdef05;
+    border-radius: 8px;
+    border: 3px solid #ff6600;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight:400;
+    margin: 0;
+    padding: 10px 30px;
+    width: auto;
+    cursor: pointer;
+}
+
+.main-button:active {
+    background-color: #bfb500;
 }
 
 button:not(:last-child) {
@@ -72,18 +90,48 @@ button:not(:last-child) {
     background-color: rgb(35, 34, 35);
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     border: 4px solid #ff6600;
     border-radius: 8px;
     margin: 0 auto;
     padding: 8px;
     width: 80%;
     max-width: 495px;
+    min-height: 60px;
 }
 
 p {
     display: block;
     margin: 0;
     width: 100%;
+}
+
+.lose-game {
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 40px;
+}
+
+.win-game {
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 40px;
+}
+
+.emoji-span {
+    font-size: 80px;
+}
+
+.inactive {
+    display: none;
 }
 
 @media (max-width: 440px) {
