--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ button {
     justify-content: center;
 }
 
-.welcome-game-container div a {
+.welcome-game-container div a img {
     width: 50%;
 }
 
