--- a/style.css
+++ b/style.css
@@ -85,21 +85,18 @@ button {
 
 .welcome-game-container div {
     margin-top: 2rem;
-    margin-left: 2rem;
     display: flex;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: center;
-}
-
-#main-image-wizard {
-    width: 50%;
 }
 
 .info-start-game {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: 40%;
+    flex-basis: fit-content;
+    flex-grow: 1;
 }
 
 .info-start-game p {
@@ -107,6 +104,11 @@ button {
     background-color: var(--light-grayish-yellow);
     border-radius: .8rem;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+}
+
+.image-start-game {
+    flex-basis: fit-content;
+    flex-grow: 2;
 }
 
 .game-container {
